--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0"
   },
