--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
     "react-toastify": "^9.1.3",
+    "resend": "^2.1.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0"
   },
