--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prepare": "husky install"
   },
   "resolutions": {
-    "strip-ansi": "6.0.1"
+    "strip-ansi": "6.0.1",
+    "string-width": "4.2.2",
+    "wrap-ansi": "7.0.0"
   },
   "dependencies": {
     "clsx": "^1.2.1",
