--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "wrap-ansi": "7.0.0"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "clsx": "^1.2.1",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
